Refactor. BibliotecaApp class. Everything inside Biblioteca class moved to a start function