@@ -1,11 +1,10 @@
 package com.twu.biblioteca;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class BookShelf {
-    private List<Book> bookList = Arrays.asList(new Book("Book1", "Author1", "1997"),
-            new Book("Book2", "Author2", "1998"));
+    private List<Book> bookList = List.of(new Book("Book1","Author1","1997"),
+            new Book("Book2","Author2","1998"));
 
     public void displayAllBooks() {
         for (Book book : bookList) {
@@ -17,4 +16,5 @@ public class BookShelf {
             System.out.println("");
         }
     }
+
 }
